# danecode

./: .gitignore  CLAUDE.md  LICENSE  Pipfile  README.md  cmd_check.txt  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
danecode/: __init__.py  country_data.py
danecode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
danecode/files/: departamentos.csv
danecode/files/centros_poblados/: 05.csv  08.csv  11.csv  13.csv  15.csv  17.csv  18.csv  19.csv  20.csv  23.csv  25.csv  27.csv  41.csv  44.csv  47.csv  50.csv  52.csv  54.csv  63.csv  66.csv  68.csv  70.csv  73.csv  76.csv  81.csv  85.csv  86.csv  88.csv  91.csv  94.csv  95.csv  97.csv  99.csv
danecode/services/: __init__.py
tests/: __main__.py
